--- a/lams_tool_gmap/web/WEB-INF/web.xml
+++ b/lams_tool_gmap/web/WEB-INF/web.xml
@@ -221,10 +221,14 @@
 	</jsp-config>
 
 	<!-- Security Constraint -->
+	<deny-uncovered-http-methods />
+	
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Secure Content</web-resource-name>
 			<url-pattern>/*</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>LEARNER</role-name>
@@ -239,6 +243,8 @@
 			<web-resource-name>Authoring content</web-resource-name>
 			<url-pattern>/pages/authoring/*</url-pattern>
 			<url-pattern>/authoring.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>AUTHOR</role-name>
@@ -251,6 +257,8 @@
 			<web-resource-name>Staff content</web-resource-name>
 			<url-pattern>/pages/monitoring/*</url-pattern>
 			<url-pattern>/monitoring.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>MONITOR</role-name>
@@ -263,6 +271,8 @@
 			<web-resource-name>Admin content</web-resource-name>
 			<url-pattern>/pages/admin/*</url-pattern>
 			<url-pattern>/lagmap10admin.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>SYSADMIN</role-name>
