--- a/lams_www/web/WEB-INF/web.xml
+++ b/lams_www/web/WEB-INF/web.xml
@@ -87,10 +87,14 @@
 		<!-- ======================================================== -->
 
 	<!-- Security Constraint -->
+	<deny-uncovered-http-methods />
+	
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Secure Content</web-resource-name>
 			<url-pattern>/secure/*</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>LEARNER</role-name>
