--- a/lams_central/web/WEB-INF/web.xml
+++ b/lams_central/web/WEB-INF/web.xml
@@ -623,10 +623,14 @@
 	</jsp-config>
 
 	<!-- Security Constraint -->
+	<deny-uncovered-http-methods />
+	
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>General secure content</web-resource-name>
 			<url-pattern>/*</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>LEARNER</role-name>
@@ -670,6 +674,8 @@
 			<url-pattern>/includes/font-awesome/*</url-pattern>
 			<url-pattern>/ckeditor/*</url-pattern>
 			<url-pattern>/favicon.ico</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 	</security-constraint>
 
@@ -677,6 +683,8 @@
 		<web-resource-collection>
 			<web-resource-name>Authoring content</web-resource-name>
 			<url-pattern>/authoring/*</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>AUTHOR</role-name>
@@ -690,6 +698,8 @@
 			<web-resource-name>Organisation grouping</web-resource-name>
 			<url-pattern>/orgGroup.jsp</url-pattern>
 			<url-pattern>/orgGrouping.jsp</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>AUTHOR</role-name>
@@ -704,6 +714,8 @@
 			<web-resource-name>Add lesson</web-resource-name>
 			<url-pattern>/addLesson.jsp</url-pattern>
 			<url-pattern>/lti/addLesson.jsp</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>MONITOR</role-name>
@@ -716,6 +728,8 @@
 			<web-resource-name>Sysadmin content</web-resource-name>
 			<url-pattern>/admin.jsp</url-pattern>
 			<url-pattern>/sysadmin.jsp</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>SYSADMIN</role-name>
