--- a/lams_gradebook/web/WEB-INF/web.xml
+++ b/lams_gradebook/web/WEB-INF/web.xml
@@ -242,10 +242,14 @@
 	</jsp-config>
 
 	<!-- Security Constraint -->
+	<deny-uncovered-http-methods />
+	
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Secure Content</web-resource-name>
 			<url-pattern>/*</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>GROUP MANAGER</role-name>
@@ -259,6 +263,8 @@
 		<web-resource-collection>
 			<web-resource-name>Monitor content</web-resource-name>
 			<url-pattern>/gradebookMonitoring.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>SYSADMIN</role-name>
