--- a/lams_monitoring/web/WEB-INF/web.xml
+++ b/lams_monitoring/web/WEB-INF/web.xml
@@ -192,10 +192,14 @@
 	</jsp-config>
 
 	<!-- Security Constraint -->
+	<deny-uncovered-http-methods />
+	
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Secure content</web-resource-name>
 			<url-pattern>/*</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>MONITOR</role-name>
@@ -206,6 +210,8 @@
 		<web-resource-collection>
 			<web-resource-name>Lesson start content</web-resource-name>
 			<url-pattern>/monitoring.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<!-- Author can preview the lesson -->
