--- a/lams_tool_sbmt/web/WEB-INF/web.xml
+++ b/lams_tool_sbmt/web/WEB-INF/web.xml
@@ -226,10 +226,14 @@
 	</jsp-config>
 
 	<!-- Security Constraint -->
+	<deny-uncovered-http-methods />
+	
 	<security-constraint>
 		<web-resource-collection>
 			<web-resource-name>Secure content</web-resource-name>
 			<url-pattern>/*</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>LEARNER</role-name>
@@ -245,6 +249,8 @@
 			<url-pattern>/authoring/*</url-pattern>
 			<url-pattern>/authoring.do</url-pattern>
 			<url-pattern>/pedagogicalPlanner.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>AUTHOR</role-name>
@@ -258,6 +264,8 @@
 			<url-pattern>/monitoring/*</url-pattern>
 			<url-pattern>/monitoring.do</url-pattern>
 			<url-pattern>/definelater.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
 		</web-resource-collection>
 		<auth-constraint>
 			<role-name>MONITOR</role-name>
