--- a/lams_www/web/WEB-INF/web.xml
+++ b/lams_www/web/WEB-INF/web.xml
@@ -91,6 +91,15 @@
 	
 	<security-constraint>
 		<web-resource-collection>
+			<web-resource-name>Public Content</web-resource-name>
+			<url-pattern>/*</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
+		</web-resource-collection>
+	</security-constraint>
+	
+	<security-constraint>
+		<web-resource-collection>
 			<web-resource-name>Secure Content</web-resource-name>
 			<url-pattern>/secure/*</url-pattern>
 			<http-method>GET</http-method>
