--- a/lams_tool_leader/.classpath
+++ b/lams_tool_leader/.classpath
@@ -25,5 +25,6 @@
 			<attribute name="javadoc_location" value="http://commons.apache.org/proper/commons-lang/javadocs/api-2.6/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="var" path="WILDFLY_HOME/modules/system/layers/base/javax/websocket/api/main/jboss-websocket-api_1.1_spec-1.1.0.Final.jar" sourcepath="/3RDPARTY_SOURCES_PROJECT/websocket"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
