--- a/lams_bb_integration/.classpath
+++ b/lams_bb_integration/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="web"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/bb-platform.jar"/>
-	<classpathentry kind="lib" path="lib/bb-taglibs.jar"/>
+	<classpathentry kind="lib" path="lib/bb-platform-9.1.201510.1171621.jar"/>
+	<classpathentry kind="lib" path="lib/bb-taglibs-9.1.201510.1171621.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="lib/bb-cms-admin.jar"/>
+	<classpathentry kind="lib" path="lib/bb-cms-admin-9.1.201510.1171621.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-discovery-0.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.0.4.jar"/>
