LDEV-4312 Added error pages declaration

--- a/lams_bb_integration/WEB-INF/web.xml
+++ b/lams_bb_integration/WEB-INF/web.xml
@@ -120,5 +120,22 @@
 		    <taglib-location>/WEB-INF/tlds/c.tld</taglib-location>
 		  </taglib>
   </jsp-config> 
+
+  <error-page>
+      <error-code>500</error-code>
+      <location>/error.jsp</location>
+  </error-page>
+  <error-page>
+      <error-code>403</error-code>
+      <location>/error.jsp</location>
+  </error-page>
+  <error-page>
+      <error-code>404</error-code>
+      <location>/error.jsp</location>
+  </error-page>
+  <error-page>
+      <error-code>405</error-code>
+      <location>/error.jsp</location>
+  </error-page>
   
 </web-app>
