LDEV-4348 Introduce servlet that is capable of removing marks scored by users that had not finished according LAMS lessons and nonetheless pushed to BB

--- a/lams_bb_integration/WEB-INF/web.xml
+++ b/lams_bb_integration/WEB-INF/web.xml
@@ -33,6 +33,10 @@
     <servlet-class>org.lamsfoundation.ld.integration.blackboard.GradebookSyncServlet</servlet-class>
   </servlet>
   <servlet>
+    <servlet-name>GradebookSyncFixServlet</servlet-name>
+    <servlet-class>org.lamsfoundation.ld.integration.blackboard.GradebookSyncFixServlet</servlet-class>
+  </servlet>
+  <servlet>
     <servlet-name>LessonManagerServlet</servlet-name>
     <servlet-class>org.lamsfoundation.ld.integration.blackboard.LessonManagerServlet</servlet-class>
   </servlet>
@@ -88,7 +92,11 @@
   <servlet-mapping>
     <servlet-name>GradebookSyncServlet</servlet-name>
     <url-pattern>/GradebookSync</url-pattern>
-  </servlet-mapping>  
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>GradebookSyncFixServlet</servlet-name>
+    <url-pattern>/GradebookSyncFix</url-pattern>
+  </servlet-mapping> 
   <servlet-mapping>
     <servlet-name>LessonManagerServlet</servlet-name>
     <url-pattern>/LessonManager</url-pattern>
