--- a/lams_central/build.xml
+++ b/lams_central/build.xml
@@ -4,17 +4,6 @@
 	
 	<import file="../lams_build/build_base.xml"/> 
 
-	<!-- Additional properties -->
-	<available file="../../lams-private/lams_planner/build.xml" property="planner.available" />
-		
-	
-	<!-- Below are Tool specifc targets and targets overriding ones from the imported base file. -->
-	<target name="_copy-planner" if="planner.available" depends="_copy-language">
-		<echo>Copying Pedagogical Planner files</echo>
-		<ant antfile="../../lams-private/lams_planner/build.xml" target="_copy-to-central" />
-	</target>
-	
-	
 	<target name="_copy-war-resources">
 		<!-- Internal target: Adds additional web content to WAR -->
 		<echo>${ant.project.name}: Copying favicon</echo>
@@ -26,8 +15,7 @@
 	</target>
 	
 	
-	<target name="_build-war"
-	        depends="_build-manifest, _copy-war-resources, _copy-planner, _copy-jsp">
+	<target name="_build-war" depends="_build-manifest, _copy-war-resources, _copy-jsp">
 		
 		<!-- Internal target: Builds WAR without archivisation -->
 		<echo>${ant.project.name}: Building exploded WAR</echo>
