Fix project names

--- a/lams_bb_integration/.project
+++ b/lams_bb_integration/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>BB_integration</name>
+	<name>lams_bb_integration</name>
 	<comment></comment>
 	<projects>
 	</projects>
