--- a/lams_tool_survey/.project
+++ b/lams_tool_survey/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lams_tool_lasurvey</name>
+	<name>lams_tool_survey</name>
 	<comment></comment>
 	<projects>
 	</projects>
