--- a/lams_build/windows.properties
+++ b/lams_build/windows.properties
@@ -35,4 +35,4 @@ contentrepository.base=C:/lams
 server.home=C:/wildfly-8.2/
 
 #Sass executable. 
-sass_exec_file=sass.bat
+sass_exec_file=C:/Program Files/Ruby/bin/sass.bat
