LDEV-4367 CSS Files removed if they are now generated files using SASS

--- a/lams_central/.gitignore
+++ b/lams_central/.gitignore
@@ -1,3 +1,13 @@
 /bin/
 /build/
 /.sass-cache/
+/web/css/addLesson.css
+/web/css/authoring.css
+/web/css/chart.css
+/web/css/defaultHTML_learner.css
+/web/css/inlineeditor.css
+/web/css/jquery.treetable.lams.css
+/web/css/main.css
+/web/css/orgGroup.css
+/web/css/orgGrouping.css
+/web/css/progressBar.css
