LDEV-4402 Get rid of LAMS customised session filter
This filter was implemented in 2005 and seems more like a workaround
than a feature we need. Especially that many of LAMS tools already use
the standard filter and they work OK.

--- a/lams_tool_vote/web/WEB-INF/web.xml
+++ b/lams_tool_vote/web/WEB-INF/web.xml
@@ -41,7 +41,7 @@
 	<filter>
 		<filter-name>hibernateFilter</filter-name>
 		<filter-class>
-			org.lamsfoundation.lams.util.CustomizedOpenSessionInViewFilter
+			org.springframework.orm.hibernate5.support.OpenSessionInViewFilter
 		</filter-class>
 		<init-param>
 			<param-name>sessionFactoryBeanName</param-name>
