--- a/lams_admin/web/WEB-INF/web.xml
+++ b/lams_admin/web/WEB-INF/web.xml
@@ -54,7 +54,7 @@
 	</filter>
 	<filter>
 		<filter-name>HibernateFilter</filter-name>
-		<filter-class>org.lamsfoundation.lams.util.CustomizedOpenSessionInViewFilter</filter-class>
+		<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
 		<init-param>
 			<param-name>sessionFactoryBeanName</param-name>
 			<param-value>coreSessionFactory</param-value>
