LDEV-4405 Minify LAMS css files by default

--- a/lams_build/common.properties
+++ b/lams_build/common.properties
@@ -34,6 +34,8 @@ conf.dir=${basedir}/conf
 # SASS properties sometimes get altered in project's own properties file
 scss.common.variables=../lams_central/conf/scss/
 scss.css.dir=${basedir}/web/css
+css.minify=true
+yuicompressor=../lams_build/lib/yuicompressor/yuicompressor-2.4.8.jar
 
 #======== TOOL PROPERTIES =========
 
