LDEV-4402 Upgrade TestHarness libraries to match rest of LAMS

--- a/TestHarness4LAMS2/learnerTest1.properties
+++ b/TestHarness4LAMS2/learnerTest1.properties
@@ -9,7 +9,7 @@ LessonEntryURL = /learning/DisplayActivity.do?lessonID=%lsId%
 # upload a file to finish any activity.
 # They could be relative or absolute path and are seperated by a semicolon 
 #-------------------------------------------------------------------
-FilesToUpload = lib/js-1.6R5.jar;lib/httpunit.jar;test.properties;AllInOneBenchmark.zip;readme.txt
+FilesToUpload = lib/rhino-1.7.7.1.jar;lib/httpunit.jar;test.properties;AllInOneBenchmark.zip;readme.txt
 
 #------------------------------------------------------------------
 # Set the number of learners to be created or updated for this test
