--- a/TestHarness4LAMS2/.classpath
+++ b/TestHarness4LAMS2/.classpath
@@ -2,23 +2,24 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="lib/httpunit.jar" sourcepath="/3rdParty_sources/httpunit"/>
-	<classpathentry exported="true" kind="lib" path="lib/nekohtml-0.9.5.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/BrowserLauncher2-all-10rc4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.1.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.13.jar"/>
-	<classpathentry kind="lib" path="lib/js-1.6R5.jar"/>
-	<classpathentry kind="lib" path="lib/jtidy-4aug2000r7-dev.jar"/>
-	<classpathentry kind="lib" path="lib/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="lib/servlet-api-2.4.jar"/>
-	<classpathentry kind="lib" path="lib/xercesImpl-2.6.1.jar"/>
-	<classpathentry kind="lib" path="lib/jbossweb.jar" sourcepath="/3rdParty_sources/jbossweb"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/jboss-websocket-api_1.1_spec-1.1.1.Final.jar"/>
-	<classpathentry kind="lib" path="lib/undertow-websockets-jsr-1.1.8.Final.jar"/>
 	<classpathentry kind="lib" path="lib/xnio-api-3.3.0.Final.jar"/>
 	<classpathentry kind="lib" path="lib/xnio-nio-3.3.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib/undertow-servlet-1.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/undertow-servlet-1.4.0.Final.jar" sourcepath="/3rdParty_sources/undertow"/>
 	<classpathentry kind="lib" path="lib/jboss-logging-3.3.0.Final.jar"/>
-	<classpathentry kind="lib" path="lib/undertow-core-1.4.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/undertow-core-1.4.0.Final.jar" sourcepath="/3rdParty_sources/undertow"/>
+	<classpathentry kind="lib" path="lib/BrowserLauncher2-all-1_3.jar"/>
+	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-servlet-api_3.1_spec-1.0.0.Final.jar" sourcepath="/3rdParty_sources/servlet-api"/>
+	<classpathentry kind="lib" path="lib/jtidy-r938.jar"/>
+	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/nekohtml.jar"/>
+	<classpathentry kind="lib" path="lib/rhino-1.7.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/undertow-websockets-jsr-1.4.0.Final.jar" sourcepath="/3rdParty_sources/undertow"/>
+	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.7.4.jar" sourcepath="/3rdParty_sources/jackson"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.7.4.jar" sourcepath="/3rdParty_sources/jackson"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
