LDEV-4405 War deployment minifies Javascript files

--- a/lams_build/common.properties
+++ b/lams_build/common.properties
@@ -35,6 +35,7 @@ conf.dir=${basedir}/conf
 scss.common.variables=../lams_central/conf/scss/
 scss.css.dir=${basedir}/web/css
 css.minify=true
+js.minify=true
 yuicompressor=../lams_build/lib/yuicompressor/yuicompressor-2.4.8.jar
 
 #======== TOOL PROPERTIES =========
