--- a/lams_central/build.xml
+++ b/lams_central/build.xml
@@ -4,7 +4,28 @@
 	
 	<import file="../lams_build/build_base.xml"/> 
 
+    <fileset id="js.to.minify" dir="${basedir}/web/includes/javascript">
+        	<include name="addLesson.js"/>
+        	<include name="chart.js"/>
+  	  	<include name="common.js"/>
+		<include name="comments.js"/>
+  	  	<include name="dialog.js"/>
+  	  	<include name="download.js"/>
+        	<include name="main.js"/>
+        	<include name="openUrls.js"/>
+        	<include name="orgGroup.js"/>
+        	<include name="orgGrouping.js"/>
+  	  	<include name="pedagogicalPlanner.js"/>
+        	<include name="progressBar.js"/>
+ 	   	<include name="portrait.js"/>
+   	 	<include name="rating.js"/>
+   	 	<include name="upload.js"/>
+  	  	<include name="authoring/*.js"/>
+    </fileset>
+	
 	<target name="_copy-war-resources">
+		<!-- authoring directory needed for the minify -->
+		<mkdir dir="${basedir}/build/war/includes/javascript/authoring" />
 		<!-- Internal target: Adds additional web content to WAR -->
 		<echo>${ant.project.name}: Copying favicon</echo>
 		<copy todir="${basedir}/build/war">
@@ -16,7 +37,6 @@
 	
 	
 	<target name="_build-war" depends="_build-manifest, _copy-war-resources, _copy-jsp">
-		
 		<!-- Internal target: Builds WAR without archivisation -->
 		<echo>${ant.project.name}: Building exploded WAR</echo>
 		<copy todir="${basedir}/build/lib/${product}.war">
@@ -28,7 +48,6 @@
 			</fileset>
 		</copy>
 	</target>
-	
 	
 	<target name="deploy-war" depends="_build-war, explode-war-delete" description="Deploys WAR.">
 		<echo>Removing cached files</echo>
