--- a/lams_tool_images/build.xml
+++ b/lams_tool_images/build.xml
@@ -3,5 +3,13 @@
 <project name="LAMS Tool Image Gallery" basedir=".">
 	
 	<import file="../lams_build/build_tools_base.xml"/>
+
+    <fileset id="js.to.minify" dir="${basedir}/web/includes/javascript">
+        	<include name="*.js"/>
+    		<exclude name="fotorama.js"/>
+        	<exclude name="jquery*.js"/>
+	    	<exclude name="lytebox.js"/>
+    </fileset>
+
 	
 </project>
