--- a/lams_tool_lamc/build.xml
+++ b/lams_tool_lamc/build.xml
@@ -3,5 +3,10 @@
 <project name="LAMS Tool Multiple Choice" basedir=".">
 	
 	<import file="../lams_build/build_tools_base.xml"/>
+
+    <fileset id="js.to.minify" dir="${basedir}/web/includes/javascript">
+        	<include name="*.js"/>
+    		<exclude name="fastclick.js"/>
+    </fileset>
 	
 </project>
