LDEV-4405 War deployment minifies Javascript files

--- a/lams_monitoring/build.xml
+++ b/lams_monitoring/build.xml
@@ -4,4 +4,8 @@
 	
 	<import file="../lams_build/build_base.xml"/> 
 	
+   <fileset id="js.to.minify" dir="${basedir}/web/includes/javascript">
+        	<include name="monitorLesson.js"/>
+    </fileset>
+
 </project>
