LDEV-4407 Move classes to the proper packages
Servlet classes were moved to learning.web.servlet package. 
(To access files' earlier history use Eclipse's Show in History feature
or run 'git log --follow ./path/to/file')

--- a/lams_learning/web/WEB-INF/web.xml
+++ b/lams_learning/web/WEB-INF/web.xml
@@ -100,14 +100,14 @@
 	<servlet>
 		<servlet-name>RepopulateProgressMarksServlet</servlet-name>
 		<servlet-class>
-			org.lamsfoundation.lams.learning.web.RepopulateProgressMarksServlet
+			org.lamsfoundation.lams.learning.web.servlet.RepopulateProgressMarksServlet
 		</servlet-class>
 	</servlet>
 	
 	<servlet>
 		<servlet-name>LogLessonMarkPushedToIntegrationsServlet</servlet-name>
 		<servlet-class>
-			org.lamsfoundation.lams.learning.web.LogLessonMarkPushedToIntegrationsServlet
+			org.lamsfoundation.lams.learning.web.servlet.LogLessonMarkPushedToIntegrationsServlet
 		</servlet-class>
 	</servlet>	
 	
