--- a/lams_build/build.xml
+++ b/lams_build/build.xml
@@ -613,6 +613,16 @@
 		
 		
 		
+		<copy todir="${server.home}/modules/system/layers/base/org/apache/xmlcommons/main" overwrite="true" verbose="true">
+			<fileset dir="lib/xml-commons">
+				<include name="xml-apis*.jar" />
+			</fileset>
+		</copy>
+		<copy tofile="${server.home}/modules/system/layers/base/org/apache/xmlcommons/main/module.xml"
+			  file="lib/xml-commons/xmlcommons.module.xml" overwrite="true" verbose="true" />
+		
+		
+		
 		<copy todir="${server.home}/modules/system/layers/base/com/thoughtworks/xstream/main" overwrite="true" verbose="true">
 			<fileset dir="lib/xstream">
 				<include name="xstream-*.jar" />
