LDEV-4433: adding new label

--- a/lams_build/unix.properties
+++ b/lams_build/unix.properties
@@ -37,3 +37,4 @@ server.home=/usr/local/wildfly-8.2/
 
 #Sass executable. 
 sass_exec_file=/usr/local/bin/sass
+server.home=/usr/local/wildfly-8.2.1/
