--- a/lams_build/common.properties
+++ b/lams_build/common.properties
@@ -90,3 +90,7 @@ db.url.run=jdbc:mysql://${db.host}:${db.port}/${db.name}
 #db.url.run=jdbc:mysql:mxj://localhost:13306/${db.name}
 
 #======== END DATABASE PROPERTIES =========
+db.name=lams_wildfly
+osPropertiesName=unix
+css.minify=false
+js.minify=false
