LDEV-4440 Rewrite configuration of an example tool
Struts servlet gets replaced with Spring one. It has its own
configuration in a separate XML file.

--- a/lams_tool_vote/web/WEB-INF/web.xml
+++ b/lams_tool_vote/web/WEB-INF/web.xml
@@ -17,7 +17,7 @@
 		<param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
 		<param-value>org.lamsfoundation.lams.tool.vote.ApplicationResources</param-value>
 	</context-param>
-
+	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:/org/lamsfoundation/lams/tool/vote/dbupdates/autopatchContext.xml</param-value>
@@ -78,27 +78,13 @@
 	</listener>
 
 	<servlet>
-		<servlet-name>action</servlet-name>
-		<servlet-class>org.apache.struts.action.ActionServlet</servlet-class>
-		<init-param>
-			<param-name>config</param-name>
-			<param-value>/WEB-INF/struts-config.xml</param-value>
-		</init-param>
-		<init-param>
-			<param-name>debug</param-name>
-			<param-value>999</param-value>
-		</init-param>
-		<init-param>
-			<param-name>detail</param-name>
-			<param-value>2</param-value>
-		</init-param>
-		<init-param>
-			<param-name>validate</param-name>
-			<param-value>true</param-value>
-		</init-param>
+		<servlet-name>spring</servlet-name>
+		<servlet-class>
+			org.springframework.web.servlet.DispatcherServlet
+		</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
+	
 	<servlet>
 		<servlet-name>download</servlet-name>
 		<servlet-class>org.lamsfoundation.lams.contentrepository.client.ToolDownload</servlet-class>
@@ -124,12 +110,12 @@
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
+	
 	<servlet-mapping>
-		<servlet-name>action</servlet-name>
-		<url-pattern>*.do</url-pattern>
-	</servlet-mapping>
-
+	    <servlet-name>spring</servlet-name>
+	    <url-pattern>*.do</url-pattern>
+  	</servlet-mapping>
+  	
 	<servlet-mapping>
 		<servlet-name>download</servlet-name>
 		<url-pattern>/download/*</url-pattern>
