LDEV-3164: removing MaxPermSize
Removing MaxPermSize as it's deprecated in Java 8. Increasing the memory allocation

--- a/TestHarness4LAMS2/build.xml
+++ b/TestHarness4LAMS2/build.xml
@@ -40,8 +40,7 @@
 				<path refid="project.classpath"/>
 			</classpath>
 			<arg value="test.properties"/>
-			<jvmarg value="-XX:MaxPermSize=256m"/>
-			<jvmarg value="-Xmx512M"/>
+			<jvmarg value="-Xmx1024"/>
 		</java>
 	</target>
 
