--- a/lams_central/.gitignore
+++ b/lams_central/.gitignore
@@ -3,6 +3,7 @@
 /.sass-cache/
 /web/css/addLesson.css
 /web/css/defaultHTML*.css
+/web/css/jquery.jqGrid.confidence-level-formattter.css
 /web/css/orgGroup.css
 /web/css/orgGrouping.css
 /web/css/purple*.css
