--- a/lams_monitoring/web/WEB-INF/web.xml
+++ b/lams_monitoring/web/WEB-INF/web.xml
@@ -220,6 +220,21 @@
 			<role-name>SYSADMIN</role-name>
 		</auth-constraint>
 	</security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>TBL Monitor interface</web-resource-name>
+			<url-pattern>/tblmonitor.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<!-- Author can preview the lesson -->
+			<role-name>MONITOR</role-name>
+			<role-name>GROUP ADMIN</role-name>
+			<role-name>GROUP MANAGER</role-name>
+			<role-name>SYSADMIN</role-name>
+		</auth-constraint>
+	</security-constraint>
 
 	<!-- Login Configuration -->
 	<login-config>
