LKC-89 Add TBL Monitoring code specific for the tools
Add TblMonitoringAction classes and /tblmonitoring/*.jsps to the
tools projects. They will be consumed solely by lams_monitoring
to generate tool specific content required for TBL Monitoring.
Tools themselves won't use those classes and jsps.

--- a/lams_tool_scratchie/web/WEB-INF/web.xml
+++ b/lams_tool_scratchie/web/WEB-INF/web.xml
@@ -247,6 +247,21 @@
 			<role-name>SYSADMIN</role-name>
 		</auth-constraint>
 	</security-constraint>
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>TBL Monitor interface</web-resource-name>
+			<url-pattern>/tblmonitoring.do</url-pattern>
+			<http-method>GET</http-method>
+ 			<http-method>POST</http-method>
+		</web-resource-collection>
+		<auth-constraint>
+			<!-- Author can preview the lesson -->
+			<role-name>MONITOR</role-name>
+			<role-name>GROUP ADMIN</role-name>
+			<role-name>GROUP MANAGER</role-name>
+			<role-name>SYSADMIN</role-name>
+		</auth-constraint>
+	</security-constraint>
 
 	<security-constraint>
 		<web-resource-collection>
