--- a/lams_tool_deploy/.classpath
+++ b/lams_tool_deploy/.classpath
@@ -10,7 +10,7 @@
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-io-1.0.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-lang-2.0.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/mysql-connector-java-5.0.8-bin.jar"/>
 	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/xstream-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/lams_build/deploy-tool/lib/mysql-connector-java-5.1.46-bin.jar" sourcepath="/3rdParty_sources/mysql-connector"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
