LDEV-4543 Can access resources from monitor with no sessions

--- a/lams_tool_larsrc/.project
+++ b/lams_tool_larsrc/.project
@@ -10,6 +10,15 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.ui.externaltools.ExternalToolBuilder</name>
+			<arguments>
+				<dictionary>
+					<key>LaunchConfigHandle</key>
+					<value>&lt;project&gt;/.externalToolBuilders/SASS_lams_tool_larsrc.launch</value>
+				</dictionary>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>com.genuitec.eclipse.j2eedt.core.webnature</nature>
